# docflow_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dev_checklist.md  docker-compose.yml  notes.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_users_and_documents.py  0002_add_document_file_storage_fields.py  0003_processing_jobs.py  0004_add_ai_processing_fields.py  0005_extraction_result_fields.py  0006_document_result_view.py
app/: main.py  worker.py
app/api/v1/: dependencies.py  routes.py  routes_auth.py  routes_documents.py  routes_users.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  document.py  openai_usage_log.py  processing_job.py  user.py
app/schemas/: ai_processing.py  document.py  processing_job.py  user.py
app/services/: ai_processing.py  processing_jobs.py  security.py  storage.py  text_extraction.py  uploads.py  users.py
app/tasks/: documents.py
scripts/: start-api.sh
tests/: conftest.py  test_document_result.py  test_documents_upload.py  test_processing_jobs.py  test_storage_service.py  test_text_extraction.py
