[project]
name = "docflow-api"
version = "0.1.0"
description = ""
authors = [
    {name = "maxx", email = "m.petrykin@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "bcrypt>=4.2,<6.0",
    "PyJWT>=2.9,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "email-validator>=2.2,<3.0",
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "celery[redis] (>=5.4,<6.0)",
    "celery-types (>=0.26.0,<0.27.0)",
    "pymupdf (>=1.24,<2.0)",
    "pytesseract (>=0.3,<1.0)",
    "pillow (>=10.0,<13.0)",
    "openai (>=2.0,<3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"